--- a/2DGameEngine.vcxproj.filters
+++ b/2DGameEngine.vcxproj.filters
@@ -98,5 +98,8 @@
     <ClInclude Include="src\Components\UiTextComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Components\ProjectileComponent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
