Changes for icon

--- a/2DGameEngine.vcxproj
+++ b/2DGameEngine.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="src\TextureManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="resources\resource.h" />
     <ClInclude Include="src\Animation.h" />
     <ClInclude Include="src\AssetManager.h" />
     <ClInclude Include="src\Collision.h" />
@@ -169,6 +170,14 @@
     <ClInclude Include="src\FontManager.h" />
     <ClInclude Include="src\Map.h" />
     <ClInclude Include="src\TextureManager.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="resources\2DGameEngine.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="assets\images\2d(1).ico" />
+    <Image Include="assets\images\2d.ico" />
+    <Image Include="resources\assets\images\2d(1).ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
