--- a/2DGameEngine.vcxproj
+++ b/2DGameEngine.vcxproj
@@ -183,6 +183,12 @@
     <Image Include="assets\images\2d.ico" />
     <Image Include="resources\assets\images\2d(1).ico" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="diagrams\Engine_Assoc_ClassDiagram.cd" />
+    <None Include="diagrams\EM_Assoc_ClassDiagram.cd" />
+    <None Include="diagrams\EC_Assoc_ClassDiagram.cd" />
+    <None Include="diagrams\ECS_ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
